# databricks

./: 01_Source_to_landzone.ipynb  CHANGELOG.md  doc-generated.md  pyproject.toml  readme.md
.github/workflows/: ci.yaml  release.yaml
notebooks/: 01_SOURCE_TO_LANDZONE.ipynb  01_Source_to_landzone.ipynb  02_LANDZONE_TO_BRONZE.ipynb  02_Landzone_to_bronze.ipynb  03_BRONZE_TO_SILVER.ipynb  04_SILVER_TO_GOLD.ipynb  04_SILVER_TO_GOLD.py.ipynb  05_DATA_VALIDATION.ipynb
scripts/: 01_SOURCE_TO_LANDZONE.py  02_LANDZONE_TO_BRONZE.py  03_BRONZE_TO_SILVER.py  04_SILVER_TO_GOLD.py  05_DATA_VALIDATION.py  utils.py
tests/: test_transformations.py
