[project]
name = "databricks"
version = "0.2.0"
description = "Brief about databricks."
readme = "README.md"
requires-python = ">=3.12"

[tool.semantic_release]
commit_parser = "conventional"
version_toml = ["pyproject.toml:project.version"]
allow_zero_version = true

[tool.semantic_release.changelog.default_templates]
changelog_file = "CHANGELOG.md"