[project]
name = "databricks"
version = "0.8.0"
description = "Brief about databricks."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.3.3",
    "pyspark>=4.0.1",
    "pytest>=8.4.2",
]

[tool.semantic_release]
commit_parser = "conventional"
version_toml = ["pyproject.toml:project.version"]
allow_zero_version = true

[tool.semantic_release.changelog.default_templates]
changelog_file = "CHANGELOG.md"
